# CQPropertyView

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: build.sh
src/: CMakeLists.txt  CQPropertyView.pro
test/: CMakeLists.txt  CQPropertyViewTest.pro
tools/: bootstrap.sh  build.sh  build_dependencies.sh
